explicitly defining an ip address per container is no longer required.

--- a/docker/sim/docker-compose-dev.yml
+++ b/docker/sim/docker-compose-dev.yml
@@ -8,7 +8,7 @@ services:
       - ./../../:/indra
     networks:
       indranet:
-        ipv4_address: 172.16.238.2
+        #ipv4_address: 172.16.238.2
     expose:
       - 62134
       - 62135
@@ -23,7 +23,7 @@ services:
       - ./../../:/indra
     networks:
       indranet:
-        ipv4_address: 172.16.238.3
+        #ipv4_address: 172.16.238.3
     depends_on:
       - seed0
     expose:
@@ -39,7 +39,7 @@ services:
       - ./../../:/indra
     networks:
       indranet:
-        ipv4_address: 172.16.238.4
+        #ipv4_address: 172.16.238.4
     depends_on:
       - seed0
     expose:
