--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -5,9 +5,9 @@ name: Go
 
 on:
   push:
-    branches: [ "main" ]
+    branches: [ "main", "protocol", "ind-bootstrap" ]
   pull_request:
-    branches: [ "main" ]
+    branches: [ "main", "protocol", "ind-bootstrap" ]
 
 jobs:
 
